tests/snapshots/matrix__matrix_add_check_without_not_valid.snap
---
source: tests/matrix.rs
expression: findings
---
- rule_id: PGM015
  severity: Critical
  message: "Adding CHECK constraint on existing table 'orders' without NOT VALID will scan the entire table while holding a SHARE ROW EXCLUSIVE lock, blocking concurrent writes. Use ADD CONSTRAINT ... NOT VALID, then VALIDATE CONSTRAINT in a separate statement."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
