tests/snapshots/matrix__matrix_add_fk_not_valid_no_index.snap
---
source: tests/matrix.rs
expression: findings
---
- rule_id: PGM501
  severity: Major
  message: "Foreign key on 'orders(customer_id)' has no covering index. Queries joining or filtering on these columns, and referential integrity checks, cause sequential scans on the referencing table."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
