tests/snapshots/matrix__matrix_add_fk_without_not_valid_no_index.snap
---
source: tests/matrix.rs
expression: findings
---
- rule_id: PGM014
  severity: Critical
  message: "Adding FOREIGN KEY constraint on existing table 'orders' without NOT VALID will scan the entire table while holding a SHARE ROW EXCLUSIVE lock on both the referencing and referenced tables. Use ADD CONSTRAINT ... NOT VALID, then VALIDATE CONSTRAINT in a separate statement."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
- rule_id: PGM501
  severity: Major
  message: "Foreign key on 'orders(customer_id)' has no covering index. Queries joining or filtering on these columns, and referential integrity checks, cause sequential scans on the referencing table."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
