tests/snapshots/matrix__matrix_add_pk_and_add_unique_both_fire.snap
---
source: tests/matrix.rs
assertion_line: 608
expression: findings
---
- rule_id: PGM012
  severity: Major
  message: "ADD PRIMARY KEY on existing table 'orders' without a prior UNIQUE constraint or unique index on column(s) [id]. Create a unique index CONCURRENTLY first, then use ADD PRIMARY KEY USING INDEX."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
- rule_id: PGM021
  severity: Critical
  message: "ADD UNIQUE on existing table 'orders' without a pre-existing unique index on column(s) [email]. Create a unique index CONCURRENTLY first, then use ADD CONSTRAINT ... UNIQUE USING INDEX."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
