tests/snapshots/matrix__matrix_add_pk_fires_pgm012_not_pgm021.snap
---
source: tests/matrix.rs
expression: findings
---
- rule_id: PGM012
  severity: Major
  message: "ADD PRIMARY KEY on existing table 'orders' without USING INDEX on column(s) [id]. Create a UNIQUE index CONCURRENTLY first, then use ADD PRIMARY KEY USING INDEX."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
