tests/snapshots/matrix__matrix_create_table_no_pk_but_unique_not_null.snap
---
source: tests/matrix.rs
assertion_line: 307
expression: findings
---
- rule_id: PGM005
  severity: Info
  message: "Table 'users' uses UNIQUE NOT NULL instead of PRIMARY KEY. Functionally equivalent but PRIMARY KEY is conventional and more explicit."
  file: migrations/001.sql
  start_line: 1
  end_line: 1
