tests/snapshots/matrix__matrix_create_table_no_pk_with_fk_no_index.snap
---
source: tests/matrix.rs
expression: findings
---
- rule_id: PGM501
  severity: Major
  message: "Foreign key on 'orders(customer_id)' has no covering index. Queries joining or filtering on these columns, and referential integrity checks, cause sequential scans on the referencing table."
  file: migrations/001.sql
  start_line: 1
  end_line: 1
- rule_id: PGM502
  severity: Major
  message: "Table 'orders' has no primary key."
  file: migrations/001.sql
  start_line: 1
  end_line: 1
